test/errors/overflow-prg-1/overflow-prg-1.asm
.inesprg 1
.ineschr 0
.inesmap 0
.inesmir 0

.prg 0

.db $12, $34

.org $FFFF

.db $56, $78
